dfir_rs/tests/compile-fail-stable/surface_demuxenum_port_elided.stderr
error: Output port from `demux_enum(..)` must be specified and must be a valid identifier.
  --> tests/compile-fail-stable/surface_demuxenum_port_elided.rs:22:9
   |
22 |         my_demux -> for_each(std::mem::drop);
   |         ^^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_demuxenum_port_elided.rs:24:8
   |
24 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
